got the navbar items to be aligned correctly

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,21 +5,6 @@
   text-align: center;
 }
 
-.AppHeader {
-  background-color: white;
-  height: 30px;
-  padding: 20px;
-  color: black;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-}
-
-.AppTitle {
-  font-size: 1.5em;
-  margin: 0;
-}
-
 .AppBody {
   background-color: #f9f9f9;
   flex-grow: 1;
